# 2stepnardl

./: .gitignore  README.md  pyproject.toml
docs/: .nojekyll  GITHUB_PAGES_SETUP.md  api.html  changelog.html  example.html  index.html  quickstart.html
docs/assets/: main.js  style.css
examples/: nardl_oil_cpi_example.ipynb
tests/: test_core.py
twostep_nardl/: __init__.py  critical_values.py  decompose.py  estimators.py  lag_selection.py  model.py  plotting.py  postestimation.py
